--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Commit & Push changes
       uses: actions-js/push@v1.4
       with:
-        branch: "evox-vic"
+        branch: "cr"
         github_token: ${{ secrets.GH_TOKEN }}
         author_email: 'israfilkhan494@gmail.com'
         author_name: 'Ij-Israfil'
